--- a/PowerPointLabs/PowerPointLabs/LiveCodingLab/Views/CodeBoxPaneItem.xaml
+++ b/PowerPointLabs/PowerPointLabs/LiveCodingLab/Views/CodeBoxPaneItem.xaml
@@ -6,7 +6,8 @@
              xmlns:theme="clr-namespace:PowerPointLabs.ColorThemes"
              xmlns:local="clr-namespace:PowerPointLabs.LiveCodingLab.Views"
              mc:Ignorable="d" 
-             d:DesignWidth="340"
+             d:DesignWidth="320"
+             MouseLeftButtonDown="OnMouseSingleClick"
              MouseDoubleClick="OnMouseDoubleClick">
     <UserControl.Resources>
         <ResourceDictionary>
@@ -63,85 +64,33 @@
             </Style>
         </ResourceDictionary>
     </UserControl.Resources>
-    <Grid x:Name="grid" ClipToBounds="True" Background="Transparent" Height="97" Margin="0,0,-3,0">
+    <Grid x:Name="grid" ClipToBounds="True" Background="Transparent" Height="60" Margin="0,0,-3,0">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition x:Name="col1" Width="3" MaxWidth="5"/>
-            <ColumnDefinition x:Name="col2" Width="250" MaxWidth="250"/>
-            <ColumnDefinition x:Name="col3" Width="35" MaxWidth="35"/>
-            <ColumnDefinition Width="35" MaxWidth="35"/>
+            <ColumnDefinition x:Name="col1" Width="270"/>
+            <ColumnDefinition x:Name="col2" Width="50"/>
         </Grid.ColumnDefinitions>
-        <Grid x:Name="canvas" Grid.Column="1" MaxWidth="225">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="95*"/>
-                <RowDefinition Height="2*"/>
-            </Grid.RowDefinitions>
-            <TextBox x:Name="codeTextBox" Style="{StaticResource TextBoxWithPlaceHolder}" 
+        <TextBox x:Name="codeTextBox" Style="{StaticResource TextBoxWithPlaceHolder}" 
                              Text="{Binding Path=Text, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Padding="1 1 1 1"
-                             TextWrapping="Wrap" FontSize="12" Tag="Enter your code here..."
-                             AcceptsReturn="True" Margin="0,5,0,0" Height="68" VerticalAlignment="Top" VerticalScrollBarVisibility="Auto"/>
-            <RadioButton x:Name="isFile" Content="File"  VerticalContentAlignment="Center" 
-                     FontSize="10" Margin="50,74,101,0" ToolTip="Check to use a file path for the code snippet."
+                             TextWrapping="Wrap" FontSize="12" Tag="Enter your code here..." IsReadOnly="True"
+                             AcceptsReturn="True" Margin="10,5,10,5" Height="27" VerticalAlignment="Top" VerticalScrollBarVisibility="Auto"/>
+        <RadioButton x:Name="isFile" Content="File"  VerticalContentAlignment="Center" 
+                     FontSize="10" Margin="57,37,118,5" ToolTip="Check to use a file path for the code snippet."
                      Checked="IsFile_Checked"/>
-            <RadioButton x:Name="isText" Content="Text"  VerticalContentAlignment="Center" 
-                     FontSize="10" Margin="0,74,151,0" ToolTip="Check to use a user input text for the code snippet."
+        <RadioButton x:Name="isText" Content="Text"  VerticalContentAlignment="Center" 
+                     FontSize="10" Margin="10,37,165,5" ToolTip="Check to use a user input text for the code snippet."
                      Checked="IsText_Checked"/>
-            <RadioButton x:Name="isDiff" Content="Diff"  VerticalContentAlignment="Center" 
-                     FontSize="10" Margin="98,74,67,0" ToolTip="Check to use a diff for the code snippet." 
+        <RadioButton x:Name="isDiff" Content="Diff"  VerticalContentAlignment="Center" 
+                     FontSize="10" Margin="103,37,72,5" ToolTip="Check to use a diff for the code snippet." 
                      Checked="IsDiff_Checked"/>
-        </Grid>
-        <Button x:Name="insertButton" Grid.Column="2" Margin="0,3,6,60" Click="InsertButton_Click" HorizontalAlignment="Right" MinWidth="25" MaxWidth="25" MinHeight="25" MaxHeight="25" Style="{StaticResource ImageButtonStyle}" Width="25" Visibility="Visible">
-            <Image x:Name="insertCode" Source="pack://siteoforigin:,,,/Resources/SyncLabEditButton.png" Stretch="Fill"/>
-            <Button.ToolTip>
-                <StackPanel>
-                    <TextBlock FontWeight="Bold" FontSize="14" Margin="0,0,0,5">Insert Code</TextBlock>
-                    <Border BorderBrush="Silver" BorderThickness="0,1,0,0" Margin="0,8" />
-                    <TextBlock>
-                        Inserts the code snippet into the selected slide
-                    </TextBlock>
-                </StackPanel>
-            </Button.ToolTip>
-        </Button>
-        <Button x:Name="refreshButton" Grid.Column="2" Margin="0,3,6,60" Click="RefreshButton_Click" HorizontalAlignment="Right" MinWidth="25" MaxWidth="25" MinHeight="25" MaxHeight="25" Style="{StaticResource ImageButtonStyle}" Width="25" Visibility="Collapsed">
-            <Image x:Name="refreshCode" Source="..\..\Resources\icon-right_rotate.png" Stretch="Fill"/>
-            <Button.ToolTip>
-                <StackPanel>
-                    <TextBlock FontWeight="Bold" FontSize="14" Margin="0,0,0,5">Refresh Code</TextBlock>
-                    <Border BorderBrush="Silver" BorderThickness="0,1,0,0" Margin="0,8" />
-                    <TextBlock>
-                        Refreshes the code
-                    </TextBlock>
-                </StackPanel>
-            </Button.ToolTip>
-        </Button>
-        <Button x:Name="deleteButton" Grid.Column="2" Margin="0,42,6,21" Click="DeleteButton_Click" HorizontalAlignment="Right" MinWidth="25" MaxWidth="25" MinHeight="25" MaxHeight="25" Style="{StaticResource ImageButtonStyle}" Width="25">
+        <Button x:Name="deleteButton" Grid.Column="2" Margin="5,0,10,25" Click="DeleteButton_Click" HorizontalAlignment="Center" MinWidth="25" MaxWidth="25" MinHeight="25" MaxHeight="25" Style="{StaticResource ImageButtonStyle}" Width="25">
             <Image x:Name="deleteImage" Source="pack://siteoforigin:,,,/Resources/SyncLabDeleteButton.png" Stretch="Fill"/>
             <Button.ToolTip>
                 <StackPanel>
-                    <TextBlock FontWeight="Bold" FontSize="14" Margin="0,0,0,5">Delete Format</TextBlock>
+                    <TextBlock FontWeight="Bold" FontSize="14" Margin="0,5,10,25">Delete Code</TextBlock>
                     <Border BorderBrush="Silver" BorderThickness="0,1,0,0" Margin="0,8" />
                     <TextBlock>
                         Removes the code box from the list.
                     </TextBlock>
-                </StackPanel>
-            </Button.ToolTip>
-        </Button>
-        <Button x:Name="moveUpButton" Grid.Column="3" Margin="0,3,3,60" Click="MoveUpButton_Click" HorizontalAlignment="Right" MinWidth="25" MaxWidth="25" MinHeight="25" MaxHeight="25" Style="{StaticResource ImageButtonStyle}" Width="25">
-            <Image x:Name="moveUpImage" Source="..\..\Resources\up_arrow.png" Stretch="Fill"/>
-            <Button.ToolTip>
-                <StackPanel>
-                    <TextBlock FontWeight="Bold" FontSize="14" Margin="0,0,0,5"><Run Text="Move Up"/></TextBlock>
-                    <Border BorderBrush="Silver" BorderThickness="0,1,0,0" Margin="0,8" />
-                    <TextBlock><Run Text="Moves the code box up by 1 position"/></TextBlock>
-                </StackPanel>
-            </Button.ToolTip>
-        </Button>
-        <Button x:Name="moveDownButton" Grid.Column="3" Margin="0,42,3,21" Click="MoveDownButton_Click" HorizontalAlignment="Right" MinWidth="25" MaxWidth="25" MinHeight="25" MaxHeight="25" Style="{StaticResource ImageButtonStyle}" Width="25">
-            <Image x:Name="moveDownImage" Source="..\..\Resources\down_arrow.png" Stretch="Fill"/>
-            <Button.ToolTip>
-                <StackPanel>
-                    <TextBlock FontWeight="Bold" FontSize="14" Margin="0,0,0,5"><Run Text="Move Down"/></TextBlock>
-                    <Border BorderBrush="Silver" BorderThickness="0,1,0,0" Margin="0,8" />
-                    <TextBlock><Run Text="Moves the code box down by 1 position"/></TextBlock>
                 </StackPanel>
             </Button.ToolTip>
         </Button>
