--- a/PowerPointLabs/PowerPointLabs/LiveCodingLab/Views/CodeBoxPaneItem.xaml
+++ b/PowerPointLabs/PowerPointLabs/LiveCodingLab/Views/CodeBoxPaneItem.xaml
@@ -64,35 +64,47 @@
             </Style>
         </ResourceDictionary>
     </UserControl.Resources>
-    <Grid x:Name="grid" ClipToBounds="True" Background="Transparent" Height="60" Margin="0,0,-3,0">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition x:Name="col1" Width="270"/>
-            <ColumnDefinition x:Name="col2" Width="50"/>
-        </Grid.ColumnDefinitions>
-        <TextBox x:Name="codeTextBox" Style="{StaticResource TextBoxWithPlaceHolder}" 
+    <Border BorderThickness="1" BorderBrush="LightSlateGray">
+        <Grid x:Name="grid" ClipToBounds="True" Background="Transparent" Height="60" Margin="0,0,-3,0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition x:Name="col1" Width="270"/>
+                <ColumnDefinition x:Name="col2" Width="50"/>
+            </Grid.ColumnDefinitions>
+            <Border BorderThickness="1" BorderBrush="LightGray" Margin="10,5,15,29" CornerRadius="5">
+                <TextBlock x:Name="codeTextBox"
                              Text="{Binding Path=Text, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Padding="1 1 1 1"
-                             TextWrapping="Wrap" FontSize="12" Tag="Enter your code here..." IsReadOnly="True"
-                             AcceptsReturn="True" Margin="10,5,10,5" Height="27" VerticalAlignment="Top" VerticalScrollBarVisibility="Auto"/>
-        <RadioButton x:Name="isFile" Content="File"  VerticalContentAlignment="Center" 
-                     FontSize="10" Margin="57,37,118,5" ToolTip="Check to use a file path for the code snippet."
-                     Checked="IsFile_Checked"/>
-        <RadioButton x:Name="isText" Content="Text"  VerticalContentAlignment="Center" 
-                     FontSize="10" Margin="10,37,165,5" ToolTip="Check to use a user input text for the code snippet."
-                     Checked="IsText_Checked"/>
-        <RadioButton x:Name="isDiff" Content="Diff"  VerticalContentAlignment="Center" 
-                     FontSize="10" Margin="103,37,72,5" ToolTip="Check to use a diff for the code snippet." 
-                     Checked="IsDiff_Checked"/>
-        <Button x:Name="deleteButton" Grid.Column="2" Margin="5,0,10,25" Click="DeleteButton_Click" HorizontalAlignment="Center" MinWidth="25" MaxWidth="25" MinHeight="25" MaxHeight="25" Style="{StaticResource ImageButtonStyle}" Width="25">
-            <Image x:Name="deleteImage" Source="pack://siteoforigin:,,,/Resources/SyncLabDeleteButton.png" Stretch="Fill"/>
-            <Button.ToolTip>
-                <StackPanel>
-                    <TextBlock FontWeight="Bold" FontSize="14" Margin="0,5,10,25">Delete Code</TextBlock>
-                    <Border BorderBrush="Silver" BorderThickness="0,1,0,0" Margin="0,8" />
-                    <TextBlock>
+                             TextWrapping="Wrap" FontFamily="Consolas"  FontSize="14" TextTrimming="WordEllipsis"
+                             Margin="3,3,3,0" Height="18" VerticalAlignment="Top"/>
+            </Border>
+            <Border BorderThickness="1" BorderBrush="LightGray" CornerRadius="5" Margin="10,34,146,4">
+                <TextBlock x:Name="inputType"
+                           Text="Input Type:" Padding="1 1 1 1" TextWrapping="Wrap" FontSize="12"
+                           Margin="3,1,45,2"/>
+            </Border>
+            <TextBlock x:Name="codeInputType"
+                           Text="{Binding Path=InputType, Mode=OneWay}" Padding="1 1 1 1" TextWrapping="Wrap" FontSize="12"
+                           Margin="79,36,149,7"/>
+            <Border BorderThickness="1" BorderBrush="LightGray" CornerRadius="5" Margin="141,34,15,4">
+                <TextBlock x:Name="slideNumber"
+                           Text="Slide: " Padding="1 1 1 1" TextWrapping="Wrap" FontSize="12"
+                           Margin="3,1,75,1"/>
+            </Border>
+            <TextBlock x:Name="codeSlideNumber"
+                           Text="{Binding Path=Slide, Mode=OneWay}" Padding="1 1 1 1" TextWrapping="Wrap" FontSize="12"
+                           Margin="180,36,22,7"/>
+            <Button x:Name="deleteButton" Grid.Column="2" Margin="5,0,10,25" Click="DeleteButton_Click" HorizontalAlignment="Center" MinWidth="25" MaxWidth="25" MinHeight="25" MaxHeight="25" Style="{StaticResource ImageButtonStyle}" Width="25">
+                <Image x:Name="deleteImage" Source="pack://siteoforigin:,,,/Resources/SyncLabDeleteButton.png" Stretch="Fill"/>
+                <Button.ToolTip>
+                    <StackPanel>
+                        <TextBlock FontWeight="Bold" FontSize="14" Margin="0,5,10,25">Delete Code</TextBlock>
+                        <Border BorderBrush="Silver" BorderThickness="0,1,0,0" Margin="0,8" />
+                        <TextBlock>
                         Removes the code box from the list.
-                    </TextBlock>
-                </StackPanel>
-            </Button.ToolTip>
-        </Button>
-    </Grid>
+                        </TextBlock>
+                    </StackPanel>
+                </Button.ToolTip>
+            </Button>
+        </Grid>
+    </Border>
+
 </UserControl>
